syntax = "proto3";

package huskysoft.gotagme.requests;

import "./photo.proto";

message InsertPhotoRequest {
  oneof url {
    string flickrUrl = 1;
    string flickrAlbumUrl = 2;
  }
}

message InsertPhotosRequest {
  repeated InsertPhotoRequest requests = 1;
}

message InsertPhotosResponse {
  Photo photo = 1;
}
